More cross browser fix and show 1 image on mobile portrait

--- a/src/HeroLayout/HeroLayout.css
+++ b/src/HeroLayout/HeroLayout.css
@@ -29,6 +29,12 @@
     overflow: hidden;
 }
 
+@media (max-width: 450px) {
+    .Hero-wrapper {
+        display: block;
+    }
+}
+
 .Hero-dores {
     max-height: 100%;
     width: 30%;    
@@ -36,6 +42,12 @@
     background-repeat: no-repeat;
     background-position: center;
     padding: 20px;
+}
+
+@media (max-width: 450px) {
+    .Hero-dores {
+        width: auto;
+    }
 }
 
 .Hero-dores:hover {
