--- a/src/HeroLayout/components/LearnMoreButton.css
+++ b/src/HeroLayout/components/LearnMoreButton.css
@@ -1,15 +1,12 @@
 .LearnMoreButton {
-    position: absolute;
-    bottom: 20px;
-    left: 0;
-    right: 0;
+    position: relative;
     width: 110px;
     height: 12px;
-    margin: 0 auto;
+    margin-bottom: 15px;
     padding: 1.25em 3.5em;
     background-color: #000;    
     color: #fff;
-    font-size: 14px;
+    font-size: 0.8em;
     text-transform: uppercase;
     border-width: 2px;
     outline: none;
